# dinos-DKN

./: .gitignore  HYPOTHESIS.md  LICENSE  README.md  pyproject.toml
notebooks/: reproduce_paper.ipynb  reproduce_temporal_loop_dkn.ipynb
paper/: dinos_novelties.tex  ideas.txt  temporal_loop_dkn.tex
src/dinos/: __init__.py  algorithms_atlas.py  anomaly_check.py  axion_dm_bridge.py  branch_taxonomy.py  casimir.py  ckm_foot_test.py  ckm_overlaps.py  closure.py  constants.py  coords.py  cp.py  dm.py  (+69 more)
tests/: test_algorithms_atlas.py  test_branch_taxonomy.py  test_casimir.py  test_closure.py  test_coords.py  test_cp.py  test_cross_repo_experiments.py  test_cz_claims_validation.py  test_dispersion_cp_hierarchy_axion.py  test_dm.py  test_ee_ej_validation.py  test_foot_atlas_discrimination.py  test_foot_branch_unification.py  test_foot_canonical_atlas.py  test_foot_duality.py  test_foot_mass_predictions.py  test_foot_meta_pattern.py  test_foot_phi_spectroscopy.py  test_foot_predictions_extended.py  test_foot_resonance_atlas.py  test_foot_robustness.py  test_foot_sector_structure.py  test_foot_systematic_scan.py  test_gauge_confinement.py  test_generations.py  test_generations_extended.py  test_geodesic.py  test_gravity_backreaction.py  test_grok_claims_validation.py  test_heavy_baryon_foot.py  test_heavy_quark_resonances.py  test_hhml_lambda_varc.py  test_holonomy_phi.py  test_keldysh_dm_proton_gravity.py  test_kerr_corrections.py  test_key_predictions_summary.py  test_layer2_principles.py  test_lepton_smt.py  test_lepton_tower_derivation.py  test_metallic_invariant_sweep.py  (+20 more)
