[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinos"
version = "0.1.0"
description = "Δῖνος — numerical and symbolic toolkit for the Dirac–Kerr–Newman (DKN) electron-as-quantized-Kerr-resonator framework."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Christian Knopp", email = "cknopp@gmail.com" }]
requires-python = ">=3.10"
keywords = ["kerr-newman", "dirac", "soliton", "casimir", "dark-matter", "physics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "sympy>=1.12",
    "mpmath>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff"]
notebooks = ["jupyter", "matplotlib"]

[project.urls]
Homepage = "https://github.com/cknopp/dinos"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
